--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
 catalog.errors.product.not_found=Товар не найден
 
 errors.404.header=Товар не удалось найти
+catalog.products.create.errors.details_size_is_invalid=Длина деталей должен быть до {max}
+catalog.products.create.errors.title_size_is_invalid=Длина названия должна быть от {min} до {max}
+catalog.products.create.errors.title_size_is_null=Название должно быть указано
